Added all but one project

--- a/bio-exp.html
+++ b/bio-exp.html
@@ -31,6 +31,7 @@
     <div id="main" style="display: none;" class="animate-bottom">
         <a href="index.html"><img src="images/home-title.png" id="home-title"></a>
         <div class="topnav" id="topnav">
+            <a href="index.html"><img src="images/home-title.png" id="home-title-topnav"></a>
             <a href="bio-exp.html">Bio and Experiences</a>
             <a href="index.html">Home</a><a href="projects.html">Coding Projects</a>
             <a href="javascript:void(0);" class="icon" onclick="topNav()"><i class="fa fa-bars"></i></a>
