--- a/bio-exp.html
+++ b/bio-exp.html
@@ -30,11 +30,17 @@
     <div id="loader"></div>
     <div id="main" style="display: none;" class="animate-bottom">
         <a href="index.html"><img src="images/home-title.png" id="home-title"></a>
-        <div class="topnav" id="topnav">
-            <a href="index.html"><img src="images/home-title.png" id="home-title-topnav"></a>
+        <div class="topnav fixed-top" id="topnav">
+            <table style="width:100%">
+                <tr>
+                    <td><a href="#"><img src="images/home-title.png" id="home-title-topnav"></a></td>
+                    <td><a href="javascript:void(0);" class="icon" onclick="topNav()"><i class="fa fa-bars"></i></a></td>
+                </tr>
+            </table>
+            <a href="projects.html">Coding Projects</a>
+            <a href="index.html">Home</a>
             <a href="bio-exp.html">Bio and Experiences</a>
-            <a href="index.html">Home</a><a href="projects.html">Coding Projects</a>
-            <a href="javascript:void(0);" class="icon" onclick="topNav()"><i class="fa fa-bars"></i></a>
+            
         </div>
         <div class="sidenav">
             <a href="index.html">Home</a>
